What is solar mobile view extra space bug fix

--- a/css/what-is-solar.css
+++ b/css/what-is-solar.css
@@ -55,7 +55,7 @@
 /* Mobile CSS */
 @media (max-width: 600px) {
   .canvas-div {
-    height: 50vh;
+    height: 40vh;
   }
 
   .img-canvas {
